--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <script src="env.js"></script>
   <meta charset="utf-8">
   <title>GestionElectricaFrontEndTest</title>
   <base href="/">
